完善店员列表、编辑店员功能

--- a/app.json
+++ b/app.json
@@ -1,9 +1,10 @@
 {
   "pages": [
+    "pages/employeesList/employeesList",
     "pages/index/index",
     "pages/authEmploye/authEmploye",
     
-    "pages/employeesList/employeesList",
+    
     "pages/home/home",
     
     "pages/addOrder/addOrder",
@@ -77,6 +78,12 @@
     ],
     "color": "#9b9b9b",
     "selectedColor": "#9b9b9b"
+  },
+  "networkTimeout": {
+    "request": 10000,
+    "connectSocket": 10000,
+    "uploadFile": 10000,
+    "downloadFile": 10000
   },
   "sitemapLocation": "sitemap.json"
 }
