调整授权方式

--- a/project.config.json
+++ b/project.config.json
@@ -21,7 +21,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.6.5",
-	"appid": "wxf6abb83d8d2b89f5",
+	"appid": "wx5d2da3feefe3a5b1",
 	"projectname": "carWashShop",
 	"debugOptions": {
 		"hidedInDevtools": []
